--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome to petclininc V2
+welcome=Welcome to petclininc
 required=is required
 notFound=has not been found
 duplicate=is already in use
